- Fix bug #27103 (preg_split('//u') incorrectly splits UTF-8 strings into octets).