ext/pcre/php_pcre.h
@@ -43,6 +43,7 @@ PHP_FUNCTION(preg_grep);
 
 PHPAPI char *php_pcre_replace(char *regex,   int regex_len, char *subject, int subject_len, zval *replace_val, int is_callable_replace, int *result_len, int limit TSRMLS_DC);
 PHPAPI pcre* pcre_get_compiled_regex(char *regex, pcre_extra **extra, int *options TSRMLS_DC);
+PHPAPI pcre* pcre_get_compiled_regex_ex(char *regex, pcre_extra **extra, int *preg_options, int *coptions TSRMLS_DC);
 
 extern zend_module_entry pcre_module_entry;
 #define pcre_module_ptr &pcre_module_entry
@@ -51,6 +52,7 @@ typedef struct {
 	pcre *re;
 	pcre_extra *extra;
 	int preg_options;
+	int compile_options;
 #if HAVE_SETLOCALE
 	char *locale;
 	unsigned const char *tables;
